Fixed an issue where the interests-canvas overflowed under the footer

--- a/new-develop.css
+++ b/new-develop.css
@@ -98,6 +98,7 @@ body.overflow-hidden {
 #root {
   position: relative;
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
+  overflow: hidden;
 }
 
 a {
